--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="MGD">
 <head>
   <title>Motorgearden</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <script src="assets/motorgearden.js"></script>
 </head>
-<body>
+<body ng-app="motorHome">
 
 <%= yield %>
 
