--- a/app/views/public/homepage.html.erb
+++ b/app/views/public/homepage.html.erb
@@ -1,2 +1,5 @@
 <h1>Hello world!</h1>
 <p>1 + 1 = {{1+1}}</p>
+
+<%= "You are logged in" if user_signed_in? %><br />
+<%= link_to "Log out", destroy_user_session_path, method: :delete if user_signed_in?%>
