--- a/app/views/public/homepage.html.erb
+++ b/app/views/public/homepage.html.erb
@@ -2,24 +2,12 @@
 
 
 <%= link_to 'Empty cart', empty_cart_path %><br>
-<table>
-	<tr><%= @product.product_name if user_signed_in?%> </tr><br>
-	<tr><%= @product.product_description if user_signed_in?%></tr><br>
-	<tr><%= @product.product_price if user_signed_in?%></tr><br>
-	<tr><%= link_to 'Add to cart', cart_add_item_path(@product.product_id) if user_signed_in?%><br></tr>
-</table>
-<table>
-	<tr><%= @product_satan.product_name if user_signed_in?%></tr><br>
-	<tr><%= @product_satan.product_description if user_signed_in?%></tr><br>
-	<tr><%= @product_satan.product_price if user_signed_in?%></tr><br>
-	<tr><%= link_to 'Add to cart', cart_add_item_path(@product_satan.product_id) if user_signed_in?%><br></tr>
-</table>
+<% if user_signed_in? %>
+	<% @user_products.each do |item| %>
 
-CART ITEM:<%= @cart_product.product_name if @cart.cart_count > 0 if user_signed_in?%><br>
-CART DESCRIPTION: <%= @cart_product.product_description if @cart.cart_count > 0 if user_signed_in?%><br>
-CART PRICE: <%= @cart_product.product_price if @cart.cart_count > 0 if user_signed_in?%><br>
+		<b>Product name:</b> <%= item.product_name %><br>
+		<b>Product description:</b> <%= item.product_description %><br>
+		<b>Product price:</b> <%= item.product_price %><hr>
 
-<hr>
-CART ITEM:<%= @cart_product_satan.product_name if @cart.cart_count > 1 if user_signed_in?%><br>
-CART DESCRIPTION: <%= @cart_product_satan.product_description if @cart.cart_count > 1 if user_signed_in?%><br>
-CART PRICE: <%= @cart_product_satan.product_price if @cart.cart_count > 1 if user_signed_in?%><br>
+	<% end %>
+<% end %>
