Sorted out db tables for cart and slots, displayed layout - found out how to add product to a cart - added image_url to products

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,9 @@
   <script src="../assets/motorgearden.js"></script>
 </head>
 <body ng-controller="motorHome">
-
-<%= yield %>
+<div class="container">
+	<%= yield %>
+</div>
 
 </body>
 </html>
