Grouped controllers and files, done some styling, added header

--- a/app/assets/javascripts/motorgearden.js.erb
+++ b/app/assets/javascripts/motorgearden.js.erb
@@ -1,9 +1,9 @@
 var MotorgearDen = angular.module("MGD", []);
 MotorgearDen.controller('motorHome', ['$scope', function($scope) {
-	 $scope.text = 0
+	 $scope.cart = 0;
 
 	 $scope.addToCart = function(){
-	 	$scope.text =  $scope.text + 1;
+	 	$scope.cart =  $scope.cart + 1;
 	 	console.log('Successfully added item to cart');
 	 };
 
