--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <script src="../assets/motorgearden.js"></script>
+  <%= render 'shared/header' %>
 </head>
 <body ng-controller="motorHome">
 <div class="container">
