--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -24,6 +24,7 @@
       	 <li><a>Cart items: <%= current_user.carts.first.cart_count %></a></li>
         <% end %>
         <li><%= link_to "Log out", destroy_user_session_path, method: :delete if user_signed_in? %></li>
+        <li><a><%= "Your an admin Harry!" if user_is_admin?%></a></li>
       </ul>
     </div>
   </div>
