--- a/app/views/admin/product/new.html.erb
+++ b/app/views/admin/product/new.html.erb
@@ -2,11 +2,10 @@
 <span class="help-block">This page is monitored and logged - only add new products if you have all the correct details. 
 If you are using this page unauthorised, legal action will be taken against you.</span>
 <%= console%>
-
-<%= form_for(@product, url: product_create_path, method: :post) do |p|%>
-
-	<%= p.label "**Product ID: " %>
-	<%= p.text_field :product_id %><br>
+<% @product.errors.full_messages.each do |message| %>
+	<%= message %>
+<% end %>
+<%= form_for(@product, url: product_create_path, method: :post, :html => {multipart: true}) do |p|%>
 
 	<%= p.label "**Product Name" %>
 	<%= p.text_field :product_name %><br>
@@ -14,8 +13,8 @@ If you are using this page unauthorised, legal action will be taken against you.
 	<%= p.label "**Product Description" %>
 	<%= p.text_field :product_description %><br>
 
-	<%= p.label "**Product image URL" %>
-	<%= p.text_field :image_url %><br>
+	<%= p.label "**Product picture" %>
+	<%= p.file_field :picture, accept: 'image/jpeg, image/gif, image/png' %><br>
 
 	<%= p.label "**Product Price" %>
 	<%= p.text_field :product_price %><br>
