Added some new functionality to cart page, added product_available? helper | Added create new product link for admins

--- a/app/views/public/public/homepage.html.erb
+++ b/app/views/public/public/homepage.html.erb
@@ -6,7 +6,13 @@
 	<%= p.product_name %><br>
 	<%= image_tag(p.picture.url, alt: p.product_name, size: "450x300") %><br>
 	<%= p.product_id %><br>
-	£<%= p.product_price %><br>
-	<%= link_to 'Delete this Product' , product_destroy_path(p), data: {confirm: "Are you sure?"} if user_is_admin?%><br>
-	<%= link_to "Add item to cart", cart_add_item_path(p.product_id) if user_signed_in? %><br>
+	<%= p.product_price == 0.0 ? "N/A" : "£#{p.product_price}" %><br>
+	<%= p.product_description %>
+	<%= link_to 'Delete this Product' , product_destroy_path(p), data: {confirm: "Are you sure?"} if user_is_admin? %><br>
+
+	<% if product_available?(p) %>
+		<%= button_to "Add item to cart", cart_add_item_path(p.product_id) if user_signed_in? %><br>
+	<% else %>
+		<%= button_to "Product not available", cart_add_item_path(p.product_id), :disabled => :true if user_signed_in? %><br>
+	<% end %>
 <% end %>
