--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -1,12 +1,13 @@
 <%= form_tag charges_path do %>
 	<article>
 		<label class="amount">
-			<span>Amount: $25.00</span>
+			<span>Amount: <%= "$#{@total}" %></span>
 		</label>
 	</article>
 
 	<script src="https://checkout.stripe.com/v2/checkout.js" class="stripe-button"
 					data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
 					data-description="Products"
-					data-amount="2000"></script>
+					data-amount="<%= @total * 100 %>"
+					data-currency="GBP"></script>
 <% end %>
