Added routes for show and edit | updated user images

--- a/app/views/member/users/show.html.erb
+++ b/app/views/member/users/show.html.erb
@@ -1,7 +1,7 @@
-<% if current_user.picture? %>
+<% if @user.picture? %>
 	<%= link_to image_tag(@user.picture.url, class: "user-profile-picture"), root_path %><br>
 <% else %>
-hi
+<%= link_to image_tag(@imageholder.picture.url, class: "user-profile-picture"), root_path %><br>
 <% end %>
 
 Hiya this is <%= @user.username %>'s account!
