--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -21,7 +21,13 @@
       	<li><%= link_to "Log in", user_session_path if !user_signed_in? %></li>
       	<li><%= link_to "Sign up", new_user_registration_path if !user_signed_in? %></li>
         <% if user_signed_in? %>
-         <li><%= link_to image_tag(current_user.picture, class: "user-picture"), root_path if current_user.picture? %></li>
+          <% if current_user.picture? %>
+
+            <li><%= link_to image_tag(current_user.picture, class: "user-picture"), user_path(current_user) if current_user.picture? %></li>
+          <% else %>
+            <li><%= link_to image_tag(User.where(:email => "adam3692@image.com").first.picture, class: "user-picture"), user_path(current_user) %></li>
+          <% end %>
+
       	 <li><%= link_to "Cart items #{current_user.carts.first.cart_count.to_s}", cart_path %></li>
         <% end %>
         <li><%= link_to "Log out", destroy_user_session_path, method: :delete if user_signed_in? %></li>
