--- a/app/views/member/users/_form.html.erb
+++ b/app/views/member/users/_form.html.erb
@@ -25,7 +25,8 @@
 
 	<div class="input-group">
 		<%= f.submit "Save", url: user_path(obj), html: { method: :put}, class: "btn btn-primary"  %>
-		<%= submit_tag "Destroy account", url: user_path(obj), html: { method: :destroy}, class: "btn btn-danger", data: {confirm: "Are you sure you want to delete your account?"}  %>
+<% end %>
+		<%= button_to "Destroy account", { action: "destroy", id: obj.id },
+																			 method: :delete, data: { confirm: "Are you sure you wish to delete your account?", class: "btn btn-danger"} %>
 	</div>
 </div>
-<% end %>
