Read through to find out what I did, banner, login, registration, sub-header

--- a/app/assets/stylesheets/motorHome.scss
+++ b/app/assets/stylesheets/motorHome.scss
@@ -12,3 +12,13 @@
 	width: 276px;
 	height: 183px;
 }
+
+.sub-header {
+	margin-top: 0%;
+	width: 100%;
+	height: 240px;
+}
+
+.navbar.navbar-default {
+	margin-bottom: 0%;
+}
