Updated controllers and views to work with new relationships | still needs more work

--- a/app/views/admin/product/new.html.erb
+++ b/app/views/admin/product/new.html.erb
@@ -18,6 +18,10 @@ If you are using this page unauthorised, legal action will be taken against you.
 	<%= p.label "**Product Price" %>
 	<%= p.text_field :product_price %><br>
 
+	<%= p.label :brand_id %>
+	<%= p.text_field :brand_id %><br>
+	<span class="help-block">Please enter the brand ID</span>
+
 	<%= p.submit %>
 	<span class="help-block">All fields with '**' next to them are required!</span>
 
