--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -28,7 +28,7 @@
               <li><%= link_to image_tag(User.where(:email => "adam3692@image.com").first.picture, class: "user-picture"), user_path(current_user) %></li>
             <% end %>
 
-        	 <li><%= link_to "Cart items #{current_user.carts.first.cart_count.to_s}", cart_path %></li>
+        	 <li><%= link_to "Cart items #{current_user.cart.cart_count.to_s}", cart_path %></li>
         <% end %>
         <li><%= link_to "Log out", destroy_user_session_path, method: :delete if user_signed_in? %></li>
         <li><a><%= "Your an admin Harry!" if user_is_admin?%></a></li>
