Updated and styled basic layout | recreated header | updated signup, login and edit user page | styled product image | updated banner

--- a/app/assets/stylesheets/user.scss.erb
+++ b/app/assets/stylesheets/user.scss.erb
@@ -11,7 +11,6 @@
 }
 
 #user-edit-container {
-	border: 1px solid #33ccff;
 	padding-bottom: 2%;
 }
 
@@ -24,6 +23,7 @@
 	font-weight: bolder;
 	font-size: 1.2em;
 	letter-spacing: -0.1em;
+	color: white;
 }
 
 #user-log-label {
@@ -37,8 +37,8 @@
 	margin-right: 0.4%;
 }
 
-.jumbotron#user-edit {
-	background-image: asset-url('/assets/<%= rand(4) %>.gif');
+.jumbotron#user {
+	background-image: asset-url('/assets/background.gif');
 	background-size: cover;
 	height: 500px;
 }
