--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default" id="haha">
   <div class="container-fluid">
     <div class="navbar-header">
     	<%= link_to "MotorGearDen", root_path, class: "navbar-brand", :onclick => 'addToCart()' %>
