--- a/app/assets/stylesheets/motorHome.scss
+++ b/app/assets/stylesheets/motorHome.scss
@@ -1,12 +1,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-.user-picture {
-	border-radius: 50%;
-	width: 50px;
-	height: 50px;
-}
-
 .user-profile-picture {
 	border-radius: 50%;
 	width: 276px;
@@ -14,11 +8,16 @@
 }
 
 .sub-header {
-	margin-top: 0%;
+	margin-top: 55px;
 	width: 100%;
 	height: 240px;
+	background-color:  #99ccff;
 }
 
-.navbar.navbar-default {
-	margin-bottom: 0%;
+span#help {
+	color: #e6e6e6;
+}
+
+#product-pic {
+	border-radius: 15%;
 }
