Updated header file name and render

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <%= render 'shared/header_new' %>
+  <%= render 'shared/header' %>
 <div class="container" id="maincontainer">
   <%= render 'shared/sub_header'%>
 	<%= render 'shared/flash' %>
