--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,38 +1,31 @@
-<nav class="navbar navbar-default" id="haha">
-  <div class="container-fluid">
-    <div class="navbar-header">
-    	<%= link_to "MotorGearDen", root_path, class: "navbar-brand", :onclick => 'addToCart()' %>
-    </div>
+<div id="menu">
+	<div class="container-fluid">
+		<div id="menu-header">
+			<%= link_to "MotorGearDen", root_path, class: "navbar-brand" %>
+		</div>
 
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><%= link_to "My brand details", root_path if user_is_brand? %></li>
-        <li><%= link_to "Create new product", product_new_path if user_is_admin? %></li>
-      </ul>
-  <%  #   <form class="navbar-form navbar-left" role="search">
-       #<div class="form-group">
-         # <input type="text" class="form-control" placeholder="Search">
-        #</div>
-       # <button type="submit" class="btn btn-default">Submit</button>
-      #</form> 
-   %>
+	<div id="menu-collapse">
+		<ul id="menu-nav">
+			<li><%= link_to "My brand details", root_path, id: "menu-text-left" if user_is_brand? %></li>
+			<li><%= link_to "Create new product", product_new_path, id: "menu-text-left" if user_is_admin? %></li>
+		</ul>
 
-      <ul class="nav navbar-nav navbar-right">
-      	<li><%= link_to "Log in", user_session_path if !user_signed_in? %></li>
-      	<li><%= link_to "Sign up", new_user_registration_path if !user_signed_in? %></li>
-        <% if user_signed_in? %>
-          <% if current_user.picture? %>
+	<ul id="menu-nav-right">
+		<li><%= link_to "Log in", user_session_path, id: "menu-text-right", :style=> "top: 15px !important; position: relative;" if !user_signed_in? %></li>
+		<li><%= link_to "Sign up", new_user_registration_path, id: "menu-text-right", :style=> "top: 15px !important; position: relative;" if !user_signed_in? %></li>
+		<% if user_signed_in? %>
+			<% if current_user.picture? %>
 
-              <li><%= link_to image_tag(current_user.picture, class: "user-picture"), user_path(current_user) if current_user.picture? %></li>
-            <% else %>
-              <li><%= link_to image_tag(User.where(:email => "adam3692@image.com").first.picture, class: "user-picture"), user_path(current_user) %></li>
-            <% end %>
+				<li><%= link_to image_tag(current_user.picture, class: "user-picture"), user_path(current_user) if current_user.picture? %></li>
+					<% else %>
+				<li><%= link_to image_tag(User.where(:email => "adam3692@image.com").first.picture, class: "user-picture"), user_path(current_user) %></li>
+			<% end %>
 
-        	 <li><%= link_to "Cart items #{current_user.cart.cart_count.to_s}", cart_path %></li>
-        <% end %>
-        <li><%= link_to "Log out", destroy_user_session_path, method: :delete if user_signed_in? %></li>
-        <li><a><%= "Your an admin Harry!" if user_is_admin?%></a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+			<li><%= link_to "Cart items #{current_user.cart.cart_count.to_s}", cart_path, id: "menu-text-right" %></li>
+		<% end %>
+			<li><%= link_to "Log out", destroy_user_session_path, method: :delete, id: "menu-text-right" if user_signed_in? %></li>
+			<li><a><%= link_to "Your an admin Harry!", root_path, id: "menu-text-right"  if user_is_admin?%></a></li>
+			</ul>
+		</div>
+	</div>
+</div>
