--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   <%= render 'shared/sub_header'%>
 	<%= render 'shared/flash' %>
 	<%= yield %>
+	<%= render 'shared/footer' %>
 </div>
 
 </body>
