--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -80,3 +80,33 @@ ul#menu-nav-right #menu-text-right:hover {
 	border-radius: 50%;
 	text-decoration: none;
 }
+
+footer {
+	margin-top: 45px;
+	padding-top: 5px;
+	border-top: 1px solid #eaeaea;
+	color: #e6e6e6;
+}
+
+footer a {
+	color: lightblue;
+}
+
+footer a:hover {
+	color: #222;
+}
+
+footer small {
+	float: left;
+}
+
+footer ul {
+	float: right;
+	list-style: none;
+}
+
+footer ul li {
+	float: left;
+	margin-left: 14px;
+	margin-right: 15px;
+}
