--- a/app/assets/stylesheets/motorHome.scss
+++ b/app/assets/stylesheets/motorHome.scss
@@ -1,12 +1,5 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
-
-.user-profile-picture {
-	border-radius: 50%;
-	width: 276px;
-	height: 183px;
-}
-
 .sub-header {
 	margin-top: 55px;
 	width: 100%;
@@ -18,6 +11,10 @@ span#help {
 	color: #e6e6e6;
 }
 
-#product-pic {
-	border-radius: 15%;
+body {
+	background-color:  #99ccff;
+}
+
+div#maincontainer {
+	background-color: #d55d5d;
 }
