--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,7 +6,7 @@
 
 	<div id="menu-collapse">
 		<ul id="menu-nav">
-			<li><%= link_to "My brand details", root_path, id: "menu-text-left" if user_is_brand? %></li>
+			<li><%= link_to "#{current_user.brand.name}'s brand details", root_path, id: "menu-text-left" if user_is_brand? %></li>
 			<li><%= link_to "Create new product", product_new_path, id: "menu-text-left" if user_is_admin? %></li>
 		</ul>
 
