Added first email for registration and environment variables

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 	<footer class="footer">
 	<small>
-		Copyright &copy; <%= link_to "MotorGearDen", root_path %>
+		Copyright &copy; <%= link_to "MotorGearDen 2016", root_path %>
 		by <%= link_to "Adam Parker", root_path %>
 	</small>
 	<nav>
