--- a/app/views/cart/cart/show.html.erb
+++ b/app/views/cart/cart/show.html.erb
@@ -1,10 +1,10 @@
-<% @user_products.each do |item| %>
+<hr><% @user_products.each do |item| %>
 	<div align="center"> <%= image_tag item.picture.url, alt: item.product_name if item.picture %><br /></div>
 	<b>Product name:</b> <%= item.product_name %><br>
 	<b>Product description:</b><br /> <p class="product-description"><%= item.product_description %></p><br>
 	<b>Product price:</b> £<%= item.product_price %><br><hr>
 <% end %>
 
-<%= "$#{@total}" %>
+<p id="total-display"><%= "£#{@total}" %></p>
 
-<%= link_to "Checkout", new_charge_path %>
+<%= link_to "Checkout", new_charge_path, class: "cart-checkout" %>
