--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -1,4 +1,4 @@
-<h2>Thanks, you paid <strong><%= @total %></strong> for the following products:</h2>
+<h2>Thanks, you paid <strong>£<%= @total %></strong> for the following products:</h2>
 <% @user_products.each do |item| %>
 	<div align="center"> <%= image_tag item.picture.url, alt: item.product_name if item.picture %><br /></div>
 	<b>Product name:</b> <%= item.product_name %><br>
