--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -1,7 +1,7 @@
 <%= form_tag charges_path do %>
 	<article>
 		<label class="amount">
-			<span>Amount: <%= "$#{@total}" %></span>
+			<span>Amount: <%= "£#{@total}" %></span>
 		</label>
 	</article>
 
