--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <meta content="Are you interested in cheap and reliable motorcycle gear? Do you love riding your motorcycle? Then Read more on MotorGearDen" name="Description">
 </head>
 <body>
   <%= render 'shared/header' %>
