--- a/app/views/shared/_sub_header.html.erb
+++ b/app/views/shared/_sub_header.html.erb
@@ -1,1 +1,3 @@
-<%= image_tag("motobanner.jpg", :alt => "banner", class: "sub-header")%>
+<div class="header-image">
+	<%= image_tag("motobanner.jpg", :alt => "banner", class: "sub-header")%>
+</div>
