--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -108,3 +108,48 @@ footer ul li {
 	margin-left: 14px;
 	margin-right: 15px;
 }
+
+.dropbtn {
+	background-color: #66b3ff;
+	color: yellow;
+	cursor: pointer;
+	font-size: 16px;
+	border: 1px solid #white	;
+	width: 105px;
+	height: 35
+}
+
+.dropbtn:hover, .dropbtn:focus {
+	background-color: #66b3ff;
+}
+
+.dropdown {
+	positon: relative;
+	top: 0;
+	display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.dropdown-content a {
+	color: black;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+}
+
+.dropdown-content a:hover { background-color: #e6e6e6; }
+
+.show {
+	dislay: block;
+}
+
+
+
+
