--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -161,7 +161,7 @@ footer ul li {
 .dropdown-content a:hover { background-color: #e6e6e6; }
 
 .show {
-	dislay: block;
+	display: block;
 }
 
 div.seperator {
