--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -14,7 +14,7 @@
   	<div id="head-dropdown" class="dropdown-content">
     	<li><%= link_to "Create new product", product_new_path, id: "menu-text-left" if user_is_admin? %></li>
     	<div class="seperator"></div>
-    	<%= link_to 'Home', root_path %>
+    	<li><%= link_to 'Create new category', category_new_path %></li>
     	<div class="seperator"></div>
     	<%= link_to 'Home', root_path %>
   </div>
