--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -132,6 +132,7 @@ footer ul li {
 	box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.5);
 	z-index: 999999;
 	border: 0;
+	text-align: left;
 }
 
 .dropdown-content {
