Added create affiliate link to admin menu, authenticated admin updated some styling for profile button

--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -151,7 +151,7 @@ footer ul li {
 	display: block;
 }
 
-#head-dropdown {
+#head-dropdown, #uhead-dropdown {
 	-webkit-box-shadow: 10px 10px 11px 0px rgba(0,0,0, 0.80);
 	-moz-box-shadow: 10px 10px 11px 0px rgba(0,0,0, 0.80);
 	box-shadow: 10px 10px 11px 0px rgba(0,0,0,0.80);
