--- a/app/assets/stylesheets/user.scss.erb
+++ b/app/assets/stylesheets/user.scss.erb
@@ -6,6 +6,11 @@
 	border: 2px solid #33ccff;
 }
 
+#form-user-edit-check {
+	border: 2px solid #33ccff;
+	display: inline-block;
+}
+
 #form-user-log {
 	border: 2px solid #33ccff;
 }
@@ -24,6 +29,14 @@
 	font-size: 1.2em;
 	letter-spacing: -0.1em;
 	color: white;
+}
+
+#user-edit-label-check {
+	font-weight: bolder;
+	font-size: 1.2em;
+	letter-spacing: -0.1em;
+	color: white;
+	display: inline-block
 }
 
 #user-log-label {
@@ -47,4 +60,8 @@
 	border-radius: 50%;
 	width: 276px;
 	height: 183px;
+}
+
+div#affiliate-check {
+	display: inline-block;	
 }
