--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,7 +16,7 @@
     	<div class="seperator"></div>
     	<li><%= link_to 'Create new category', category_new_path, id: "menu-text-left" if user_is_admin? %></li>
     	<div class="seperator"></div>
-    	<%= link_to 'Home', root_path %>
+    	<%= link_to 'Create new affiliate', affiliate_new_path, id: "menu-text-left" if user_is_admin? %>
   </div>
 </div>
 <% end %>
@@ -34,7 +34,7 @@
 			<div class="dropdown">
   			<button onclick="uheadDrop()" class="udropbtn">My profile</button>
   			<div id="uhead-dropdown" class="userdrop-content">
-    			<li><%= link_to "My Profile", user_path(current_user), id: "menu-text-left" if user_signed_in? %></li>
+    			<li><%= link_to "My Profile", user_path(current_user) if user_signed_in? %></li>
     		<div class="seperator"></div>
     			<li><%= link_to 'Edit my profile', edit_user_path(current_user.id) if user_signed_in? %></li>
     		<div class="seperator"></div>
