--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,7 +16,9 @@
     	<div class="seperator"></div>
     	<li><%= link_to 'Create new category', category_new_path, id: "menu-text-left" if user_is_admin? %></li>
     	<div class="seperator"></div>
-    	<%= link_to 'Create new affiliate', affiliate_new_path, id: "menu-text-left" if user_is_admin? %>
+    	<li><%= link_to 'Create new affiliate', affiliate_new_path, id: "menu-text-left" if user_is_admin? %></li>
+    	<div class="seperator"></div>
+    	<li><%= link_to 'Create new brand', brand_new_path, id: "menu-text-left" if user_is_admin?%>
   </div>
 </div>
 <% end %>
