Added first and last name to userdetail and user, added my_details tab for edit. styled user details updated 'update details' rake task

--- a/app/assets/javascripts/user-edit.js.erb
+++ b/app/assets/javascripts/user-edit.js.erb
@@ -1,9 +1,17 @@
 function userSwitch() {
 	$('#user-form').toggle();
 	$('#address-form').hide();
+	$('#details-form').hide();
 };
 
 function addressSwitch() {
 	$('#address-form').toggle();
 	$('#user-form').hide();
+	$('#details-form').hide();
 };
+
+function detailsSwitch(){
+	$('#details-form').show();
+	$('#address-form').hide();
+	$('#user-form').hide();
+}
