--- a/app/views/member/users/edit.html.erb
+++ b/app/views/member/users/edit.html.erb
@@ -3,8 +3,9 @@
 	<div class="container" id="user-edit-container" align="center">
 		<div id="user-address" align="left">
 			<div id="side-menu" align="left">
-				<button onclick="userSwitch()" id="user-detail">User details</button><br>
+				<button onclick="userSwitch()" id="user-detail" >User details</button><br>
 				<button onclick="addressSwitch()" id="user-detail">Address details</button>
+				<button onclick="detailsSwitch()" id="user-detail">My details</button>
 			</div>
 		</div>
 			<div id="user-form" align="center">
@@ -12,6 +13,9 @@
 			</div>
 			<div id="address-form" align="center">
 				<%= render 'address_form', obj: @user %>
+		</div>
+			<div id="details-form" align="center">
+				<%= render 'details', obj: @user %>
 		</div>
 	</div>
 </div>
