--- a/app/views/member/users/_address_form.html.erb
+++ b/app/views/member/users/_address_form.html.erb
@@ -1,3 +1,4 @@
+<h2 id="menu-header">My address</h2>
 <%= form_for obj, url: update_address_path(obj), html: { method: :get} do |f| %>
 	<% obj.errors.full_messages.each do |message| %>
 		<%= message %><br>
@@ -30,6 +31,4 @@
 		<div class="input-group">
 			<%= submit_tag "Update address detail", url: update_address_path(obj), html: { method: :get	}, class: "btn btn-primary"  %>
 	<% end %>
-			<%= button_to "Destroy account", { action: "destroy", id: obj.id },
-																				 method: :delete, data: { confirm: "Are you sure you wish to delete your account?", class: "btn btn-danger"} %>
 </div>
